[project]
name = "reho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kendall-w>=1.0.0",
    "matplotlib>=3.10.7",
    "nibabel>=5.3.2",
    "nilearn>=0.12.1",
    "nipype>=1.10.0",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
    "spyder-kernels>=3.1.0",
]
